--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,33 +1,28 @@
 <div class="d-flex align-items-center">
-<h1>掲示板一覧</h1>
-<div class="ml-auto boards__linkBox">
-  <a href="/boards/new" class="btn btn-outline-dark">新規作成</a>
-</div>
+  <h1>掲示板一覧</h1>
+  <div class="ml-auto boards__linkBox">
+    <a href="/boards/new" class="btn btn-outline-dark">新規作成</a>
+  </div>
 </div>
 <table class="table table-hover boards__table">
-<thead class="thead-dark">
-  <tr>
-    <th>ID</th>
-    <th>タイトル</th>
-    <th>作成者</th>
-    <th>作成日時</th>
-    <th>更新日時</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <th>1</th>
-    <td>雑談掲示板</td>
-    <td>Taro</td>
-    <td>2018年4月1日</td>
-    <td>2018年4月15日</td>
-  </tr>
-  <tr>
-    <th>2</th>
-    <td>雑談掲示板2</td>
-    <td>Ken</td>
-    <td>2018年4月1日</td>
-    <td>2018年4月15日</td>
-  </tr>
-</tbody>
+  <thead class="thead-dark">
+    <tr>
+      <th>ID</th>
+      <th>タイトル</th>
+      <th>作成者</th>
+      <th>作成日時</th>
+      <th>更新日時</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @boards.each do |board| %>
+      <tr>
+        <th><%= board.id %></th>
+        <th><%= board.title %></th>
+        <th><%= board.name %></th>
+        <th><%= board.created_at %></th>
+        <th><%= board.updated_at %></th>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
