--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -1,10 +1,20 @@
-.boards__table{
-  tr:hover{
+.boards__table {
+  tr:hover {
     cursor: pointer;
   }
 }
-.boards__linkBox{
-  a{
-    margin:0 8px;
+
+.boards__linkBox {
+  a {
+    margin: 0 8px;
   }
+}
+
+.boards__searchForm {
+  display: inline-block;
+}
+
+.boards__select {
+  display: inline-block;
+  width: auto;
 }
